Querys desenvolvidas
