# backend/basico-backend/java/server/src-gen/main/java/br/com/senior/furb/basico/TotalLucro.java
@@ -1,0 +1,13 @@
+/**
+ * This is a generated file. DO NOT EDIT ANY CODE HERE, YOUR CHANGES WILL BE LOST.
+ */
+package br.com.senior.furb.basico;
+
+import br.com.senior.messaging.model.*;
+
+@CommandDescription(name="totalLucro", kind=CommandKind.Query, requestPrimitive="totalLucro", responsePrimitive="totalLucroResponse")
+public interface TotalLucro extends MessageHandler {
+    
+    public TotalLucroOutput totalLucro(TotalLucroInput request);
+    
+}
